# fluxshop

./: Cargo.toml  README.md
src/: cli.rs  flux.rs  gui.rs  main.rs
