[package]
name = "fluxshop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "*", features = ["all_loaders"] }
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["jpeg", "png"] }
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
